
# 定义一个虚拟清单，目的是为了让rust-analyzer识别
[workspace]
members = [
    "commander-cli",
    "config-rs",
    "crawl-demo",
    "diesel_demo",
    "kt-cli",
    "minigrep",
    "tauri-todo-app/src-tauri",
    "yuque-tools",
    "simple-application/*",
    'actix-web',
]

exclude = ["simple-application/hello"]


# [profile.dev.package.insta]
# opt-level = 3

# [profile.dev.package.similar]
# opt-level = 3

resolver = "2"