[package]
name = "ytool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
owo-colors = "3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }

rsa = "0.9.2"

rand = '0.8'

base64 = "0.21.3"

chrono = '0.4'
